# Let-Me-Speak

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_and_run.bat  push_to_github.bat
src/: EmojiManager.cpp  EmojiManager.h  Interface.cpp  Interface.h  Utils.cpp  Utils.h  main.cpp
src/debug/: GLog.cpp  GLog.h  GLogConfig.h  GLogMacros.h  GLogUtils.cpp  GLogUtils.h
src/utils/: image.cpp  image.h
